fixed PL spelling -thanks @joe4ska - and padding issue on mobile

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -37,7 +37,7 @@ body {
 .tm-site-subtitle {
   color: #030404;
   font-size: 1.2rem;
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
 }
 
 .tm-section-1 {
@@ -94,6 +94,7 @@ body {
   background-color: white;
   color: #000;
   padding: 75px 81px 75px 90px;
+  padding-bottom: 15px;
   border-radius: 50%;
   width: 550px;
   height: 550px;
